# stream-keys-extension

./: .gitignore  LICENSE  Makefile  README.md  main.js  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.cursor/commands/: debug.md  review.md  rules.md
.cursor/plans/: es_module_encapsulation_8093bfb6.plan.md  fix_disney_fullscreen_video_40552411.plan.md  refactor_debouncing_tests_663884d1.plan.md  (+3 more)
apps/extension/scripts/build-safari/: dmg-config.json  dmg_settings.py  helpers.sh  main.sh  pyproject.toml  ui.sh
apps/extension/scripts/build-safari/.cursor/rules/: build.mdc
apps/extension/scripts/build-safari/log/: .gitignore
apps/extension/scripts/build-safari/src/build_safari/: __init__.py  __main__.py  cli.py  config.py  runner.py
apps/extension/scripts/build-safari/src/build_safari/steps/: __init__.py  appstore.py  base.py  dmg.py  notarize.py  signing.py  vite.py  xcode.py
apps/extension/scripts/build-safari/src/build_safari/ui/: __init__.py  app.py  protocol.py  simple.py
apps/extension/scripts/build-safari/src/build_safari/utils/: __init__.py  logging.py  process.py  terminal.py
assets/: StreamKeys.icns  hero_banner.pxd  llm_context.md  screenshot.pxd  web_description.txt  web_description_firefox.md
debug/: vite-debug-logger.ts
handlers/: base.js  disney.js  hbomax.js
homepage/: eslint.config.js  package-lock.json  package.json
scripts/: build-safari-signed.sh
services/: disney.js  hbomax.js
settings/: settings.css  settings.html  settings.js
src/: build.test.ts  manifest.json
(+199 files in other folders)
