[project]
name = "build-safari"
version = "1.0.0"
description = "Safari extension build tool for Stream Keys"
requires-python = ">=3.14"
dependencies = [
    "textual>=3.0.0",
    "dmgbuild>=1.6.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/build_safari"]

[tool.hatch.build.targets.sdist]
include = ["src/build_safari"]

# =============================================================================
# Build Configuration (app metadata only - developer config in .env)
# =============================================================================

[tool.build-safari]
# App metadata
app_name = "Stream Keys"
bundle_id = "com.getstreamkeys.StreamKeys"

# Build paths (relative to project root - apps/extension/)
build_dir = "build/production/safari"

# Logging
max_log_files = 5

# DMG settings
[tool.build-safari.dmg]
title = "Stream Keys"
icon = "../../../../assets/StreamKeys.icns"
background = "../../../../assets/dmg-background.png"
icon_size = 175
window_position = [200, 120]
window_size = [660, 480]
app_position = [151, 279]
applications_position = [510, 274]
